# scrape-n-geo

./: .gitignore  Pipfile  Untitled.ipynb  pyproject.toml  requirements.txt  scrape.csv  scrapinghub.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scrape_n_geo/: .gitignore  Untitled.ipynb  files.txt  items.py  middlewares.py  new-crawl.json  new_crawl.json  pipelines.py  pword.py  requirements.txt  scrape.json  scrapinghub.yml  scrapy.cfg  settings.py  setup.py  urls_to_scrape.py
scrape_n_geo/.scrapy/httpcache/jsc/61/61f008e3d817c46b49ab12a304561707fcc9c8c9/: meta  pickled_meta  response_headers
scrape_n_geo/.scrapy/httpcache/jsc/c1/c192372e7937828fff4d7672e69fa614bd6e4c14/: meta  pickled_meta  response_headers
scrape_n_geo/local_outputs/: output_20180530_2026.csv  output_20180530_2026.json
scrape_n_geo/project.egg-info/: SOURCES.txt
scrape_n_geo/scrape_n_geo/: 1.py  extensions.py  items.py  lookup.csv  lookup.py  pipelines.py  settings.py
scrape_n_geo/scrape_n_geo/spiders/: gen_fixture.py  jsc.py
scrape_n_geo/scraper_build.egg-info/: PKG-INFO  top_level.txt
scrape_n_geo/spiders/: gen_fixture.py  jsc.py
scraper_build.egg-info/: SOURCES.txt  entry_points.txt
