[tool.poetry]
name = "scrape-n-geo"
version = "0.1.0"
description = ""
authors = ["Eric Sherman <ericandrewsherman@gmail.com>"]
license = "dont use"

[tool.poetry.dependencies]
python = "^3.8"
asn1crypto = "^1.4.0"
attrs = "^21.2.0"
Automat = "^20.2.0"
backcall = "^0.2.0"
beautifulsoup4 = "^4.9.3"
bleach = "^3.3.1"
bs4 = "^0.0.1"
certifi = "^2021.5.30"
cffi = "^1.14.6"
chardet = "^4.0.0"
click = "^8.0.1"
colorama = "^0.4.4"
constantly = "^15.1.0"
cryptography = "^3.4.7"
cssselect = "^1.1.0"
decorator = "^5.0.9"
docker-py = "^1.10.6"
docker-pycreds = "^0.4.0"
entrypoints = "^0.3"
et-xmlfile = "^1.1.0"
future = "^0.18.2"
geocoder = "^1.38.1"
html5lib = "^1.1"
hyperlink = "^21.0.0"
idna = "^3.2"
incremental = "^21.3.0"
ipykernel = "^6.0.3"
ipython_genutils = "^0.2.0"
ipython = "^7.25.0"
ipywidgets = "^7.6.3"
jdcal = "^1.4.1"
jedi = "^0.18.0"
Jinja2 = "^3.0.1"
jsonschema = "^3.2.0"
jupyter-client = "^6.2.0"
jupyter-console = "^6.4.0"
jupyter-core = "^4.7.1"
jupyter = "^1.0.0"
lxml = "^4.6.3"
MarkupSafe = "^2.0.1"
mistune = "^0.8.4"
nbconvert = "^6.1.0"
nbformat = "^5.1.3"
notebook = "^6.4.0"
numpy = "^1.21.1"
openpyxl = "^3.0.7"
pandas = "^1.3.1"
pandocfilters = "^1.4.3"
parsel = "^1.6.0"
parso = "^0.8.2"
pickleshare = "^0.7.5"
pluggy = "^0.13.1"
prompt-toolkit = "^3.0.19"
py = "^1.10.0"
pyasn1-modules = "^0.2.8"
pyasn1 = "^0.4.8"
pycparser = "^2.20"
PyDispatcher = "^2.0.5"
Pygments = "^2.9.0"
pyOpenSSL = "^20.0.1"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
PyYAML = "^5.4.1"
pyzmq = "^22.1.0"
qtconsole = "^5.1.1"
queuelib = "^1.6.1"
ratelim = "^0.1.6"
requests = "^2.26.0"
retrying = "^1.3.3"
scrapinghub = "^2.3.1"
Scrapy = "^2.5.0"
Send2Trash = "^1.7.1"
service-identity = "^21.1.0"
simplegeneric = "^0.8.1"
six = "^1.16.0"
terminado = "^0.10.1"
testpath = "^0.5.0"
tornado = "^6.1"
tox = "^3.24.0"
tqdm = "^4.61.2"
traitlets = "^5.0.5"
Twisted = "^21.7.0"
urllib3 = "^1.26.6"
virtualenv = "^20.6.0"
w3lib = "^1.22.0"
wcwidth = "^0.2.5"
webencodings = "^0.5.1"
websocket-client = "^1.1.0"
widgetsnbextension = "^3.5.1"
xlrd = "^2.0.1"
"zope.interface" = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
